# paint.h

./: CMakeLists.txt  README.md  paint.h
example/: CMakeLists.txt  main.c  make.sh
example/src/: main.c
include/: paint.h
include/paint/: app.h  array.h  brush.h  event.h  macro.h  math.h  paint.h  path.h  surface.h  texture.h  window.h
src/: app.c  app.h  surface.h  window.c  window.h
src/linux/: app.c  window.c
src/linux/gtk4/: app.c  window.c
src/linux/x11/: app.c  app.h  window.c
